squash changes in interest-calculation-extension branch

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -237,6 +237,7 @@ form.label.loan.product.amortization=Amortization:
 form.label.loan.product.arrears.tolerance=Arrears tolerance:
 form.label.loan.product.nominal.interestrate=Nominal interest rate %:
 form.label.loan.product.interest.method=Interest method:
+form.label.loan.product.interest.rate.calcutated.in.period=Interest calculation period:
 
 validation.msg.product.name.cannot.be.blank=Product name cannot be blank.
 validation.msg.product.description.exceeds.max.length=The content of the description has exceeded max allowed length of 500 characters.
