--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -236,6 +236,7 @@ form.label.loan.product.amortization=Amortization:(fr)
 form.label.loan.product.arrears.tolerance=Arrears tolerance:(fr)
 form.label.loan.product.nominal.interestrate=Nominal interest rate %:(fr)
 form.label.loan.product.interest.method=Interest method:(fr)
+form.label.loan.product.interest.rate.calcutated.in.period=Interest calculation period:(fr)
 
 validation.msg.product.name.cannot.be.blank=Product name cannot be blank.(fr)
 validation.msg.product.description.exceeds.max.length=The content of the description has exceeded max allowed length of 500 characters.(fr)
