work through cleaner implementation of error handling support for http api for the office resource.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -40,7 +40,7 @@ error.msg.client.id.invalid=Client does not exist.
 error.msg.office.id.invalid=Office does not exist.
 error.msg.office.duplicate.externalId=An office with 'External Id' already exists.
 error.msg.office.duplicate.name=An office with 'name' already exists.
-error.msg.office.unknown.data.integretity.issue=An unknown data integrity issue occured. 
+error.msg.office.unknown.data.integrity.issue=An unknown data integrity issue occured. 
 
 dialog.title.confirmation.required=Confirmation required
 text.confirmation.required=Are you sure?
