--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -40,7 +40,7 @@ error.msg.client.id.invalid=Client does not exist.(fr)
 error.msg.office.id.invalid=Office does not exist.(fr)
 error.msg.office.duplicate.externalId=An office with 'External Id' already exists.(fr)
 error.msg.office.duplicate.name=An office with 'name' already exists.(fr)
-error.msg.office.unknown.data.integretity.issue=An unknown data integrity issue occured.(fr)
+error.msg.office.unknown.data.integrity.issue=An unknown data integrity issue occured.(fr)
 
 dialog.title.confirmation.required=Confirmation required(fr)
 text.confirmation.required=Are you sure?(fr)
