finish off integration of organisation admin functions in UI with backend services through cross origin request from jQuery.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -250,7 +250,7 @@ validation.msg.product.interest.rate.per.period.amount.cannot.be.empty=Nominal i
 
 validation.msg.product.currency.digitsAfterDecimal.must.be.between.zero.and.six.inclusive=Decimal places must be a number between zero and six inclusive.
 validation.msg.product.principal.amount.must.be.greater.than.zero=Loan amount must be greater than zero.
-validation.msg.product.repayment.repaidEvery.outside.allowed.range=Repaid every is out of allowed range for selected repayment frequency type.
+validation.msg.product.repayment.repaidEvery.outside.allowed.range=Repaid every must be between {0} and {1} inclusive given the selected repayment frequency type.
 validation.msg.product.number.of.repayments.is.out.of.range=# of repayments is out of allowed range for selected repayment frequency type.
 validation.msg.product.arrears.tolerance.amount.cannot.be.negative=Arrears tolerance cannot be negative.
 validation.msg.product.interest.rate.per.period.amount.cannot.be.negative=Nominal interest rate % cannot be negative.
