support update single piece of information for loan product and tidy up validation.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -242,16 +242,18 @@ form.label.loan.product.interest.rate.calcutated.in.period=Interest calculation 
 validation.msg.product.name.cannot.be.blank=Product name cannot be blank.
 validation.msg.product.description.exceeds.max.length=The content of the description has exceeded max allowed length of 500 characters.
 validation.msg.product.currency.digitsAfterDecimal.cannot.be.empty=You must enter a number to represent number of digits after decimal to be supported for product.
-validation.msg.product.principal.amount.cannot.be.empty=Loan amount cannot be blank.
-validation.msg.product.repayment.repaidEvery.cannot.be.empty=Repaid every cannot be blank.
-validation.msg.product.number.of.repayments.cannot.be.empty=# of repayments cannot be blank.
-validation.msg.product.arrears.tolerance.amount.cannot.be.empty=Arrears tolerance cannot be blank.
-validation.msg.product.interest.rate.per.period.amount.cannot.be.empty=Nominal interest rate % cannot be blank.
+validation.msg.product.digitsAfterDecimal.is.not.within.expected.range=Decimal places must be a number between {1} and {2} inclusive.
 
-validation.msg.product.currency.digitsAfterDecimal.must.be.between.zero.and.six.inclusive=Decimal places must be a number between zero and six inclusive.
+validation.msg.product.repayment.repaidEvery.cannot.be.empty=Repaid every cannot be blank.
+validation.msg.product.repaymentEvery.not.greater.than.zero=Repaid every must be greater than 0.
+validation.msg.product.number.of.repayments.cannot.be.empty=# of repayments cannot be blank.
+validation.msg.product.numberOfRepayments.not.greater.than.zero=# of repayments must be greater than 0.
+
+validation.msg.product.principalFormatted.cannot.be.blank=Loan amount cannot be blank.
+validation.msg.product.inArrearsToleranceAmountFormatted.cannot.be.blank=Arrears tolerance cannot be blank.
+validation.msg.product.interestRatePerPeriodFormatted.cannot.be.blank=Nominal interest rate % cannot be blank.
+
 validation.msg.product.principal.amount.must.be.greater.than.zero=Loan amount must be greater than zero.
-validation.msg.product.repayment.repaidEvery.outside.allowed.range=Repaid every must be between {0} and {1} inclusive given the selected repayment frequency type.
-validation.msg.product.number.of.repayments.is.out.of.range=# of repayments is out of allowed range for selected repayment frequency type.
 validation.msg.product.arrears.tolerance.amount.cannot.be.negative=Arrears tolerance cannot be negative.
 validation.msg.product.interest.rate.per.period.amount.cannot.be.negative=Nominal interest rate % cannot be negative.
 
@@ -270,8 +272,10 @@ form.label.office.openedon=Opened on:
 form.label.office.externalid=External id:
 
 validation.msg.office.name.cannot.be.blank=Office name cannot be blank.
-validation.msg.office.parent.cannot.be.blank=You must select a parent office.
-validation.msg.office.opening.date.cannot.be.blank=You must choose a date to represent when the office commenced services.
+validation.msg.office.parentId.cannot.be.blank=You must select a parent office.
+validation.msg.office.parentId.not.greater.than.zero=You must select a parent office.
+validation.msg.office.openingDateFormatted.cannot.be.blank=You must choose a date to represent when the office commenced services.
+validation.msg.office.externalId.exceeds.max.length=External id exceeds max length of {0} alpha-numeric characters - {1}.
 
 dialog.title.configuration.currencies=Currency Configuration
 form.label.configuration.available.currencies=Available currencies:
