--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -241,16 +241,18 @@ form.label.loan.product.interest.rate.calcutated.in.period=Interest calculation 
 validation.msg.product.name.cannot.be.blank=Product name cannot be blank.(fr)
 validation.msg.product.description.exceeds.max.length=The content of the description has exceeded max allowed length of 500 characters.(fr)
 validation.msg.product.currency.digitsAfterDecimal.cannot.be.empty=You must enter a number to represent number of digits after decimal to be supported for product.(fr)
-validation.msg.product.principal.amount.cannot.be.empty=Loan amount cannot be blank.(fr)
-validation.msg.product.repayment.repaidEvery.cannot.be.empty=Repaid every cannot be blank.(fr)
-validation.msg.product.number.of.repayments.cannot.be.empty=# of repayments cannot be blank.(fr)
-validation.msg.product.arrears.tolerance.amount.cannot.be.empty=Arrears tolerance cannot be blank.(fr)
-validation.msg.product.interest.rate.per.period.amount.cannot.be.empty=Nominal interest rate % cannot be blank.(fr)
+validation.msg.product.digitsAfterDecimal.is.not.within.expected.range=Decimal places must be a number between {1} and {2} inclusive.
 
-validation.msg.product.currency.digitsAfterDecimal.must.be.between.zero.and.six.inclusive=Decimal places must be a number between zero and six inclusive.(fr)
+validation.msg.product.repayment.repaidEvery.cannot.be.empty=Repaid every cannot be blank.(fr)
+validation.msg.product.repaymentEvery.not.greater.than.zero=Repaid every must be greater than 0.(fr)
+validation.msg.product.number.of.repayments.cannot.be.empty=# of repayments cannot be blank.(fr)
+validation.msg.product.numberOfRepayments.not.greater.than.zero=# of repayments must be greater than 0.(fr)
+
+validation.msg.product.principalFormatted.cannot.be.blank=Loan amount cannot be blank.(fr)
+validation.msg.product.inArrearsToleranceAmountFormatted.cannot.be.blank=Arrears tolerance cannot be blank.(fr)
+validation.msg.product.interestRatePerPeriodFormatted.cannot.be.blank=Nominal interest rate % cannot be blank.(fr)
+
 validation.msg.product.principal.amount.must.be.greater.than.zero=Loan amount must be greater than zero.(fr)
-validation.msg.product.repayment.repaidEvery.outside.allowed.range=Repaid every is out of allowed range for selected repayment frequency type.(fr)
-validation.msg.product.number.of.repayments.is.out.of.range=# of repayments is out of allowed range for selected repayment frequency type.(fr)
 validation.msg.product.arrears.tolerance.amount.cannot.be.negative=Arrears tolerance cannot be negative.(fr)
 validation.msg.product.interest.rate.per.period.amount.cannot.be.negative=Nominal interest rate % cannot be negative.(fr)
 
@@ -269,8 +271,10 @@ form.label.office.openedon=Opened on:(fr)
 form.label.office.externalid=External id:(fr)
 
 validation.msg.office.name.cannot.be.blank=Office name cannot be blank.(fr)
-validation.msg.office.parent.cannot.be.blank=You must select a parent office.(fr)
-validation.msg.office.opening.date.cannot.be.blank=You must choose a date to represent when the office commenced services.(fr)
+validation.msg.office.parentId.cannot.be.blank=You must select a parent office.(fr)
+validation.msg.office.parentId.not.greater.than.zero=You must select a parent office.(fr)
+validation.msg.office.openingDateFormatted.cannot.be.blank=You must choose a date to represent when the office commenced services.(fr)
+validation.msg.office.externalId.exceeds.max.length=External id exceeds max length of {0} alpha-numeric characters - {1}.(fr)
 
 form.label.configuration.available.currencies=Available currencies:(fr)
 form.label.configuration.allowed.currencies=Allowed currencies:(fr)
