tidy up validation for users.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -316,7 +316,8 @@ validation.msg.username.already.exists.in.organisation=An account with that user
 validation.msg.user.firstname.cannot.be.blank=Firstname cannot be blank.(fr)
 validation.msg.user.lastname.cannot.be.blank=Lastname cannot be blank.(fr)
 validation.msg.user.email.cannot.be.blank=Email cannot be blank.(fr)
-validation.msg.user.office.cannot.be.blank=You must select an office.(fr)
+validation.msg.user.officeId.cannot.be.blank=You must select an office.(fr)
+validation.msg.user.officeId.not.greater.than.zero=You must select an office.(fr)
 validation.msg.user.roles.cannot.be.blank=A user must have at least one role.(fr)
 validation.msg.changepassword.password.cannot.be.blank=Password cannot be blank.(fr)
 validation.msg.changepassword.passwordrepeat.cannot.be.blank=Repeated password cannot be blank.(fr)
