--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -318,8 +318,9 @@ validation.msg.username.already.exists.in.organisation=An account with that user
 validation.msg.user.firstname.cannot.be.blank=Firstname cannot be blank.
 validation.msg.user.lastname.cannot.be.blank=Lastname cannot be blank.
 validation.msg.user.email.cannot.be.blank=Email cannot be blank.
-validation.msg.user.office.cannot.be.blank=You must select an office.
-validation.msg.user.roles.cannot.be.blank=A user must have at least one role.
+validation.msg.user.officeId.cannot.be.blank=You must select an office.
+validation.msg.user.officeId.not.greater.than.zero=You must select an office.
+validation.msg.user.roles.cannot.be.empty=A user must have at least one role.
 validation.msg.changepassword.password.cannot.be.blank=Password cannot be blank.
 validation.msg.changepassword.passwordrepeat.cannot.be.blank=Repeated password cannot be blank.
 validation.msg.changepassword.passwordrepeat.not.the.same=Password and Repeat password are not the same.
