tidy up ui for loanproducts and offices after json changes.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -16,7 +16,7 @@ label.client.search=Choose client:
 option.client.search.first.choice=--Select Client--
 link.add.new.client=Add a new client
 
-page.client.account.title=View Client Account Details
+page.client.account.title=View Client Account Detailscon
 page.admin.home.title=Administration Home
 page.admin.settings.title=Account Settings
 
@@ -281,7 +281,7 @@ dialog.title.configuration.currencies=Currency Configuration
 form.label.configuration.available.currencies=Available currencies:
 form.label.configuration.allowed.currencies=Allowed currencies:
 
-validation.msg.organisation.allowed.currencies.cannot.be.blank=You must select at least one currency that is 'allowed' for your organisation.
+validation.msg.configuration.currencies.cannot.be.empty=You must select at least one currency that is 'allowed' for your organisation.
 
 # user account settings and admin screens
 tab.settings=Settings
