--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -279,7 +279,7 @@ validation.msg.office.externalId.exceeds.max.length=External id exceeds max leng
 form.label.configuration.available.currencies=Available currencies:(fr)
 form.label.configuration.allowed.currencies=Allowed currencies:(fr)
 
-validation.msg.organisation.allowed.currencies.cannot.be.blank=You must select at least one currency that is 'allowed' for your organisation.(fr)
+validation.msg.configuration.currencies.cannot.be.empty=You must select at least one currency that is 'allowed' for your organisation.(fr)
 
 # user account settings and admin screens
 tab.settings=Settings(fr)
