--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -29,12 +29,13 @@ label.longname=Full name:
 label.joiningdate=Joining date:
 
 error.msg.header=You have the following errors:
-validation.msg.client.office.cannot.be.blank=A client must be associated with an office.
+validation.msg.client.officeId.cannot.be.blank=A client must be associated with an office.
 validation.msg.client.firstname.cannot.be.blank=First name cannot be blank.
 validation.msg.client.lastname.cannot.be.blank=Last name cannot be blank.
-validation.msg.client.joining.date.cannot.be.blank=Joining date cannot be blank.
+validation.msg.client.joiningDateFormatted.cannot.be.blank=Joining date cannot be blank.
 validation.msg.client.fullname.must.be.provide.or.firstname.lastname=A fullname must be provided or else both firstname and lastname details.
-validation.msg.client.fullname.cannot.entered.when.firstname.or.lastname.entered=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
+validation.msg.client.firstname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
+validation.msg.client.lastname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
 
 error.msg.client.id.invalid=Client does not exist.
 error.msg.office.id.invalid=Office does not exist.
