remove need for undo resource - align undo of state transitions with state transitions allowing for note to be added through ui.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -115,16 +115,13 @@ validation.msg.loan.repayment.must.be.greater.than.zero=The repayment amount mus
 validation.msg.loan.adjustment.must.be.zero.or.greater=The repayment amount must be a number greater than or equal to zero.
 
 # loan event and transactions screens
+label.loan.on=On:
 label.loan.action.note=Note:
 dialog.title.reject.loan=Reject loan
-label.loan.rejected.on=Rejected on:
 dialog.title.loan.withdrawn.by.client=Withdrawn by client
-label.loan.withdrawn.by.client.on=Withdrawn on:
 dialog.title.approve.loan=Approve loan
-label.loan.approved.on=Approved on:
 dialog.title.undo.loan.approval=Undo loan approval: confirmation required
 dialog.title.disburse.loan=Disburse loan
-label.loan.disbursed.on=Disbursed on:
 dialog.title.undo.loan.disbursal=Undo loan disbursal: confirmation required
 dialog.title.loan.repayment=Loan repayment
 dialog.title.adjust.loan.repayment=Adjust loan repayment
