--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -114,16 +114,13 @@ validation.msg.loan.repayment.must.be.greater.than.zero=The repayment amount mus
 validation.msg.loan.adjustment.must.be.zero.or.greater=The repayment amount must be a number greater than or equal to zero.(fr)
 
 # loan event and transactions screens
+label.loan.on=On:(fr)
 label.loan.action.note=Note:(fr)
 dialog.title.reject.loan=Reject loan(fr)
-label.loan.rejected.on=Rejected on:(fr)
 dialog.title.loan.withdrawn.by.client=Withdrawn by client(fr)
-label.loan.withdrawn.by.client.on=Withdrawn on:(fr)
 dialog.title.approve.loan=Approve loan(fr)
-label.loan.approved.on=Approved on:(fr)
 dialog.title.undo.loan.approval=Undo loan approval: confirmation required(fr)
 dialog.title.disburse.loan=Disburse loan(fr)
-label.loan.disbursed.on=Disbursed on:(fr)
 dialog.title.undo.loan.disbursal=Undo loan disbursal: confirmation required(fr)
 dialog.title.loan.repayment=Loan repayment(fr)
 dialog.title.adjust.loan.repayment=Adjust loan repayment(fr)
