--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -239,20 +239,20 @@ form.label.loan.product.interest.rate.calcutated.in.period=Interest calculation 
 
 validation.msg.product.name.cannot.be.blank=Product name cannot be blank.
 validation.msg.product.description.exceeds.max.length=The content of the description has exceeded max allowed length of 500 characters.
-validation.msg.product.currency.digitsAfterDecimal.cannot.be.empty=You must enter a number to represent number of digits after decimal to be supported for product.
+validation.msg.product.digitsAfterDecimal.cannot.be.blank=You must enter a number to represent number of digits after decimal to be supported for product.
 validation.msg.product.digitsAfterDecimal.is.not.within.expected.range=Decimal places must be a number between {1} and {2} inclusive.
 
-validation.msg.product.repayment.repaidEvery.cannot.be.empty=Repaid every cannot be blank.
+validation.msg.product.repaymentEvery.cannot.be.blank=Repaid every cannot be blank.
 validation.msg.product.repaymentEvery.not.greater.than.zero=Repaid every must be greater than 0.
-validation.msg.product.number.of.repayments.cannot.be.empty=# of repayments cannot be blank.
+validation.msg.product.numberOfRepayments.cannot.be.blank=# of repayments cannot be blank.
 validation.msg.product.numberOfRepayments.not.greater.than.zero=# of repayments must be greater than 0.
 
-validation.msg.product.principalFormatted.cannot.be.blank=Loan amount cannot be blank.
-validation.msg.product.inArrearsToleranceAmountFormatted.cannot.be.blank=Arrears tolerance cannot be blank.
-validation.msg.product.interestRatePerPeriodFormatted.cannot.be.blank=Nominal interest rate % cannot be blank.
+validation.msg.product.principal.cannot.be.blank=Loan amount cannot be blank.
+validation.msg.product.inArrearsTolerance.cannot.be.blank=Arrears tolerance cannot be blank.
+validation.msg.product.interestRatePerPeriod.cannot.be.blank=Nominal interest rate % cannot be blank.
 
-validation.msg.product.principal.amount.must.be.greater.than.zero=Loan amount must be greater than zero.
-validation.msg.product.arrears.tolerance.amount.cannot.be.negative=Arrears tolerance cannot be negative.
+validation.msg.product.principal.not.greater.than.zero=Loan amount must be greater than zero.
+validation.msg.product.inArrearsTolerance.not.zero.or.greater=Arrears tolerance must be greater than or equal to zero.
 validation.msg.product.interest.rate.per.period.amount.cannot.be.negative=Nominal interest rate % cannot be negative.
 
 table.heading.office.name=Office Name
