support client update properly and tidy up parameter names for client.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages_fr.properties
@@ -31,10 +31,9 @@ error.msg.header=You have the following errors:(fr)
 validation.msg.client.officeId.cannot.be.blank=A client must be associated with an office.(fr)
 validation.msg.client.firstname.cannot.be.blank=First name cannot be blank.(fr)
 validation.msg.client.lastname.cannot.be.blank=Last name cannot be blank.(fr)
-validation.msg.client.joiningDateFormatted.cannot.be.blank=Joining date cannot be blank.(fr)
-validation.msg.client.fullname.must.be.provide.or.firstname.lastname=A fullname must be provided or else both firstname and lastname details.(fr)
-validation.msg.client.firstname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.(fr)
-validation.msg.client.lastname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.(fr)
+validation.msg.client.joiningDate.cannot.be.blank=Joining date cannot be blank.(fr)
+validation.msg.client.firstname.cannot.also.be.provided.when.clientOrBusinessName.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.(fr)
+validation.msg.client.lastname.cannot.also.be.provided.when.clientOrBusinessName.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.(fr)
 
 error.msg.client.id.invalid=Client does not exist.(fr)
 error.msg.office.id.invalid=Office does not exist.(fr)
