--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -25,17 +25,16 @@ label.office=Office:
 option.office.first.choice=--Select Office--
 label.lastname=Last name:
 label.firstname=First name:
-label.longname=Full name:
+label.longname=Client or Business name:
 label.joiningdate=Joining date:
 
 error.msg.header=You have the following errors:
 validation.msg.client.officeId.cannot.be.blank=A client must be associated with an office.
 validation.msg.client.firstname.cannot.be.blank=First name cannot be blank.
 validation.msg.client.lastname.cannot.be.blank=Last name cannot be blank.
-validation.msg.client.joiningDateFormatted.cannot.be.blank=Joining date cannot be blank.
-validation.msg.client.fullname.must.be.provide.or.firstname.lastname=A fullname must be provided or else both firstname and lastname details.
-validation.msg.client.firstname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
-validation.msg.client.lastname.cannot.also.be.provided.when.fullname.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
+validation.msg.client.joiningDate.cannot.be.blank=Joining date cannot be blank.
+validation.msg.client.firstname.cannot.also.be.provided.when.clientOrBusinessName.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
+validation.msg.client.lastname.cannot.also.be.provided.when.clientOrBusinessName.is.populated=You cannot provide both fullname and firstname or lastname details. A fullname must be provided or else both firstname and lastname details.
 
 error.msg.client.id.invalid=Client does not exist.
 error.msg.office.id.invalid=Office does not exist.
