tidy up calculate loan schedule validation.

--- a/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
+++ b/mifosng-individual-lending-app/src/main/webapp/WEB-INF/static/global-translations/messages.properties
@@ -109,10 +109,6 @@ validation.msg.loan.transaction.id.is.invalid=Loan transaction identifier is inv
 validation.msg.loan.state.transition.date.cannot.be.blank=A date must be provided when transitioning the loan into this state.
 validation.msg.note.exceeds.max.length=The content of the note exceeds max length of 1000 characters.
 
-validation.msg.loan.repayment.date.cannot.be.blank=The repayment date cannot be blank.
-validation.msg.loan.repayment.must.be.greater.than.zero=The repayment amount must be a number greater than zero.
-validation.msg.loan.adjustment.must.be.zero.or.greater=The repayment amount must be a number greater than or equal to zero.
-
 # loan event and transactions screens
 label.loan.on=On:
 label.loan.action.note=Note:
@@ -127,7 +123,6 @@ dialog.title.adjust.loan.repayment=Adjust loan repayment
 dialog.title.waive.loan=Waive outstanding amount
 label.loan.transaction.on=Repayment on:
 label.loan.transaction.amount=Amount:
-
 
 tab.client.account.loan.details=Details
 tab.client.account.loan.schedule=Schedule
@@ -211,7 +206,23 @@ form.label.loan.interest.charged.from=Interest charged from:
 form.label.loan.expected.disbursement.date.on=Expected disbursement on:
 form.label.loan.first.repayment.on=First repayment on:
 
-validation.msg.loan.expectedDisbursementDate.method.cannot.be.blank=Expected disbursement on field cannot be blank.
+validation.msg.loan.digitsAfterDecimal.cannot.be.blank=You must enter a number to represent number of digits after decimal to be supported for product.
+validation.msg.loan.digitsAfterDecimal.is.not.within.expected.range=Decimal places must be a number between {1} and {2} inclusive.
+validation.msg.loan.repaymentEvery.cannot.be.blank=Repaid every cannot be blank.
+validation.msg.loan.repaymentEvery.not.greater.than.zero=Repaid every must be greater than 0.
+validation.msg.loan.numberOfRepayments.cannot.be.blank=# of repayments cannot be blank.
+validation.msg.loan.numberOfRepayments.not.greater.than.zero=# of repayments must be greater than 0.
+validation.msg.loan.principal.cannot.be.blank=Loan amount cannot be blank.
+validation.msg.loan.inArrearsTolerance.cannot.be.blank=Arrears tolerance cannot be blank.
+validation.msg.loan.interestRatePerPeriod.cannot.be.blank=Nominal interest rate % cannot be blank.
+validation.msg.loan.principal.not.greater.than.zero=Loan amount must be greater than zero.
+validation.msg.loan.inArrearsTolerance.not.zero.or.greater=Arrears tolerance must be greater than or equal to zero.
+validation.msg.loan.interest.rate.per.period.amount.cannot.be.negative=Nominal interest rate % cannot be negative.
+validation.msg.loan.repayment.date.cannot.be.blank=The repayment date cannot be blank.
+validation.msg.loan.repayment.must.be.greater.than.zero=The repayment amount must be a number greater than zero.
+validation.msg.loan.adjustment.must.be.zero.or.greater=The repayment amount must be a number greater than or equal to zero.
+
+validation.msg.loan.expectedDisbursementDate.cannot.be.blank=Expected disbursement on field cannot be blank.
 validation.msg.loan.expectedDisbursementDate.cannot.be.after.first.repayment.date=Expected disbursement date cannot be after the first repayment date.
 validation.msg.loan.interestCalculatedFromDate.must.be.entered.when.using.repayments.startfrom.field=The date interest is to be calculated from cannot be left blank when a date is provided for when repayments start from.
 validation.msg.loan.submitted.on.date.cannot.be.blank=Submitted on date cannot be blank.
