--- a/JavaScriptApps/resources/global-translations/messages.properties
+++ b/JavaScriptApps/resources/global-translations/messages.properties
@@ -1,6 +1,9 @@
 # jQuery.1ln8 plugin seems to give first line of properties file as error for some reason.
 app.name=Mifos - Individual Lending:
 
+login.username=User Name
+login.password=Passwordx
+
 link.topnav.clients=Clients
 link.topnav.users=User Administration
 link.topnav.organisation=Organisation Administration
