--- a/JavaScriptApps/resources/global-translations/messages_fr.properties
+++ b/JavaScriptApps/resources/global-translations/messages_fr.properties
@@ -1,5 +1,8 @@
 app.name=Mifos - Individual Lending (fr):
 
+login.username=User Name (fr)
+login.password=Password (fr)
+
 link.topnav.clients=Clients(fr)
 link.topnav.users=User Administration(fr)
 link.topnav.organisation=Organisation Administration(fr)
