--- a/JavaScriptApps/resources/global-translations/messages.properties
+++ b/JavaScriptApps/resources/global-translations/messages.properties
@@ -156,7 +156,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action
 label.client.account.loan.status=Status:
 label.client.account.loan.status.since=since
 label.client.account.loan.status.arrears=In arrears by:
-label.client.account.loan.submitted.on=Sumbitted on:
+label.client.account.loan.submitted.on=Submitted on:
 label.client.account.loan.approved.on=Approved on:
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:
 label.client.account.loan.disbursed.on=Disbursed on:
