--- a/JavaScriptApps/resources/global-translations/messages_pt.properties
+++ b/JavaScriptApps/resources/global-translations/messages_pt.properties
@@ -159,7 +159,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action(pt)
 label.client.account.loan.status=Status:(pt)
 label.client.account.loan.status.since=since(pt)
 label.client.account.loan.status.arrears=In arrears by:(pt)
-label.client.account.loan.submitted.on=Sumbitted on:(pt)
+label.client.account.loan.submitted.on=Submitted on:(pt)
 label.client.account.loan.approved.on=Approved on:(pt)
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:(pt)
 label.client.account.loan.disbursed.on=Disbursed on:(pt)
