--- a/JavaScriptApps/resources/global-translations/messages_zh.properties
+++ b/JavaScriptApps/resources/global-translations/messages_zh.properties
@@ -159,7 +159,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action(zh)
 label.client.account.loan.status=Status:(zh)
 label.client.account.loan.status.since=since(zh)
 label.client.account.loan.status.arrears=In arrears by:(zh)
-label.client.account.loan.submitted.on=Sumbitted on:(zh)
+label.client.account.loan.submitted.on=Submitted on:(zh)
 label.client.account.loan.approved.on=Approved on:(zh)
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:(zh)
 label.client.account.loan.disbursed.on=Disbursed on:(zh)
