--- a/JavaScriptApps/resources/global-translations/messages_es.properties
+++ b/JavaScriptApps/resources/global-translations/messages_es.properties
@@ -159,7 +159,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action(es)
 label.client.account.loan.status=Status:(es)
 label.client.account.loan.status.since=since(es)
 label.client.account.loan.status.arrears=In arrears by:(es)
-label.client.account.loan.submitted.on=Sumbitted on:(es)
+label.client.account.loan.submitted.on=Submitted on:(es)
 label.client.account.loan.approved.on=Approved on:(es)
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:(es)
 label.client.account.loan.disbursed.on=Disbursed on:(es)
