--- a/JavaScriptApps/resources/global-translations/messages_fr.properties
+++ b/JavaScriptApps/resources/global-translations/messages_fr.properties
@@ -159,7 +159,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action(fr)
 label.client.account.loan.status=Status:(fr)
 label.client.account.loan.status.since=since(fr)
 label.client.account.loan.status.arrears=In arrears by:(fr)
-label.client.account.loan.submitted.on=Sumbitted on:(fr)
+label.client.account.loan.submitted.on=Submitted on:(fr)
 label.client.account.loan.approved.on=Approved on:(fr)
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:(fr)
 label.client.account.loan.disbursed.on=Disbursed on:(fr)
