--- a/JavaScriptApps/resources/global-translations/messages_es.properties
+++ b/JavaScriptApps/resources/global-translations/messages_es.properties
@@ -159,7 +159,7 @@ tab.client.account.loan.schedule.table.column.heading.action=Action(es)
 label.client.account.loan.status=Status:(es)
 label.client.account.loan.status.since=since(es)
 label.client.account.loan.status.arrears=In arrears by:(es)
-label.client.account.loan.submitted.on=Submitted on:(es)
+label.client.account.loan.submitted.on=Sumbitted on:(es)
 label.client.account.loan.approved.on=Approved on:(es)
 label.client.account.loan.expected.disbursement.on=Expected dibursement on:(es)
 label.client.account.loan.disbursed.on=Disbursed on:(es)
@@ -276,6 +276,8 @@ validation.msg.office.parentId.not.greater.than.zero=You must select a parent of
 validation.msg.office.openingDateFormatted.cannot.be.blank=You must choose a date to represent when the office commenced services.(es)
 validation.msg.office.externalId.exceeds.max.length=External id exceeds max length of {0} alpha-numeric characters - {1}.(es)
 
+
+dialog.title.configuration.currencies=Currency Configuration (es)
 form.label.configuration.available.currencies=Available currencies:(es)
 form.label.configuration.allowed.currencies=Allowed currencies:(es)
 
