--- a/JavaScriptApps/resources/global-translations/messages_pt.properties
+++ b/JavaScriptApps/resources/global-translations/messages_pt.properties
@@ -276,6 +276,7 @@ validation.msg.office.parentId.not.greater.than.zero=You must select a parent of
 validation.msg.office.openingDateFormatted.cannot.be.blank=You must choose a date to represent when the office commenced services.(pt)
 validation.msg.office.externalId.exceeds.max.length=External id exceeds max length of {0} alpha-numeric characters - {1}.(pt)
 
+dialog.title.configuration.currencies=Currency Configuration (pt)
 form.label.configuration.available.currencies=Available currencies:(pt)
 form.label.configuration.allowed.currencies=Allowed currencies:(pt)
 
