--- a/JavaScriptApps/resources/global-translations/messages_zh.properties
+++ b/JavaScriptApps/resources/global-translations/messages_zh.properties
@@ -276,6 +276,7 @@ validation.msg.office.parentId.not.greater.than.zero=You must select a parent of
 validation.msg.office.openingDateFormatted.cannot.be.blank=You must choose a date to represent when the office commenced services.(zh)
 validation.msg.office.externalId.exceeds.max.length=External id exceeds max length of {0} alpha-numeric characters - {1}.(zh)
 
+dialog.title.configuration.currencies=Currency Configuration (zh)
 form.label.configuration.available.currencies=Available currencies:(zh)
 form.label.configuration.allowed.currencies=Allowed currencies:(zh)
 
