--- a/JavaScriptApps/resources/global-translations/messages.properties
+++ b/JavaScriptApps/resources/global-translations/messages.properties
@@ -2,7 +2,7 @@
 app.name=Mifos - Individual Lending:
 
 login.username=User Name
-login.password=Passwordx
+login.password=Password
 
 link.topnav.clients=Clients
 link.topnav.users=User Administration
