--- a/JavaScriptApps/resources/global-translations/messages_es.properties
+++ b/JavaScriptApps/resources/global-translations/messages_es.properties
@@ -1,4 +1,8 @@
 app.name=Mifos - Individual Lending (es):
+app.loading=Loading...(es)
+
+reporting.decimals=Decimals (es)
+reporting.format=Format (es)
 
 login.username=User Name (es)
 login.password=Password (es)
