--- a/JavaScriptApps/resources/global-translations/messages_fr.properties
+++ b/JavaScriptApps/resources/global-translations/messages_fr.properties
@@ -1,4 +1,8 @@
 app.name=Mifos - Individual Lending (fr):
+app.loading=Loading...(fr)
+
+reporting.decimals=Decimals (fr)
+reporting.format=Format (fr)
 
 login.username=User Name (fr)
 login.password=Password (fr)
