--- a/JavaScriptApps/resources/global-translations/messages_pt.properties
+++ b/JavaScriptApps/resources/global-translations/messages_pt.properties
@@ -1,4 +1,8 @@
 app.name=Mifos - Individual Lending (pt):
+app.loading=Loading...(pt)
+
+reporting.decimals=Decimals (pt)
+reporting.format=Format (pt)
 
 login.username=User Name (pt)
 login.password=Password (pt)
