--- a/JavaScriptApps/resources/global-translations/messages_zh.properties
+++ b/JavaScriptApps/resources/global-translations/messages_zh.properties
@@ -1,4 +1,8 @@
 app.name=Mifos - Individual Lending (zh):
+app.loading=Loading...(zh)
+
+reporting.decimals=Decimals (zh)
+reporting.format=Format (zh)
 
 login.username=User Name (zh)
 login.password=Password (zh)
