--- a/JavaScriptApps/resources/stretchyreporting/mifosngbundle/Messages.properties
+++ b/JavaScriptApps/resources/stretchyreporting/mifosngbundle/Messages.properties
@@ -1,4 +1,8 @@
 
+#Options
+Show Table=Show Table
+Full CSV Export=Full CSV Export
+
 #Messages
 appropriateValues = Please select appropriate values
 appropriateDateValues = Please enter appropriate date values
