--- a/JavaScriptApps/resources/global-translations/messages_fr.properties
+++ b/JavaScriptApps/resources/global-translations/messages_fr.properties
@@ -1,4 +1,5 @@
-app.name=Mifos - Individual Lending (fr):
+
+app.name=Individual Lending (fr)
 app.loading=Loading...(fr)
 
 reporting.decimals=Decimals (fr)
