--- a/JavaScriptApps/resources/global-translations/messages_pt.properties
+++ b/JavaScriptApps/resources/global-translations/messages_pt.properties
@@ -1,4 +1,5 @@
-app.name=Mifos - Individual Lending (pt):
+
+app.name=Individual Lending (pt)
 app.loading=Loading...(pt)
 
 reporting.decimals=Decimals (pt)
