--- a/JavaScriptApps/resources/global-translations/messages_zh.properties
+++ b/JavaScriptApps/resources/global-translations/messages_zh.properties
@@ -1,4 +1,5 @@
-app.name=Mifos - Individual Lending (zh):
+
+app.name=Individual Lending (zh)
 app.loading=Loading...(zh)
 
 reporting.decimals=Decimals (zh)
