--- a/JavaScriptApps/resources/global-translations/messages.properties
+++ b/JavaScriptApps/resources/global-translations/messages.properties
@@ -1,5 +1,5 @@
 # jQuery.1ln8 plugin seems to give first line of properties file as error for some reason.
-app.name=Mifos - Individual Lending:
+app.name=Individual Lending
 app.loading=Loading...
 
 reporting.decimals=Decimals
