--- a/JavaScriptApps/resources/global-translations/messages_es.properties
+++ b/JavaScriptApps/resources/global-translations/messages_es.properties
@@ -1,4 +1,5 @@
-app.name=Mifos - Individual Lending (es):
+
+app.name=Individual Lending (es)
 app.loading=Loading...(es)
 
 reporting.decimals=Decimals (es)
