MIFOSX-1939, Modified reports

--- a/mifosng-provider/src/main/pentahoReports/Client Saving Transactions_fr.properties
+++ b/mifosng-provider/src/main/pentahoReports/Client Saving Transactions_fr.properties
@@ -9,4 +9,8 @@ lable.title.Transaction.from=À partir de la date :
 lable.title.Saving.Transaction.To= Jusqu’à la date :
 lable.title.Client.Name=Client Nom
 lable.title.Savings.Account.Name/No=Account Name/No
+lable.title.Branch=Branch
+lable.title.Staff=Staff
+lable.title.Interest=Interest Rate
+lable.title.Balance=Balance
 
