Modifies reports MIFOSX-1939

--- a/mifosng-provider/src/main/pentahoReports/Client Saving Transactions_fr.properties
+++ b/mifosng-provider/src/main/pentahoReports/Client Saving Transactions_fr.properties
@@ -13,4 +13,6 @@ lable.title.Branch=Branch
 lable.title.Staff=Staff
 lable.title.Interest=Interest Rate
 lable.title.Balance=Balance
+PrintedBy\:=Printed by:
+On\:=On:
 
